# qb2pgsql

./: .gitignore  README.md  main.py  pyproject.toml
qb2pgsql/: __init__.py  constants.py  db.py  main.py
tests/: conftest.py  test_main.py
